--- a/css/maincontent.css
+++ b/css/maincontent.css
@@ -57,28 +57,52 @@
     font-size: 0.9em;
     color: #000000;
   } */
+  *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
    .content-holder-box{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     gap: 25px;
+    padding: 40px 15px;
+   }
+   .content-headings{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
    }
    .content-holder-box .content-holder-heading{
+    font-family: Prompt;
     font-size: 32px;
+    line-height: 34px;
     font-weight: 700;
+    color: #5D5CDC;
+    text-align: center;
+   }
+   .content-holder-box .lines{
+    border: 4px solid #FEB12F;
+    max-width: 60px;
+    width: 100%;
+    color: #FEB12F;
+    border-radius: 4px;
    }
    .experience-box-holder{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    gap: 20px;
+    gap: 40px;
     width: 100%;
    }
   .experience-box{
     position: relative;
-    max-width: 1200px;
+    max-width: 1500px;
     width: 100%;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     border-radius: 10px;
@@ -89,18 +113,52 @@
     display: flex;
     justify-content: space-between;
   }
-  .upper-content-bx{
-    display: flex;
-    padding: 15px;
-    gap: 10px;
-  }
-  .exp-content{
-    max-width: 1000px;
+  .upper-icon{
+    min-width: 50px;
+    max-width: 60px;
     width: 100%;
   }
+  .upper-icon img{
+    max-width: 60px;
+    width: 100%;
+    object-fit: cover;
+  }
+  .upper-content-bx{
+    display: flex;
+    flex-direction: column;
+    padding: 10px 15px;
+    gap: 10px;
+  }
+  .upper-part{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+  }
+  .exp-content{
+    /* max-width: 1000px; */
+    width: 100%;
+  }
+  .exp-head{
+    font-family: Prompt;
+    font-size: 28px;
+    line-height: 34px;
+    font-weight: 600;
+    width: 100%;
+  }
+  .exp-para{
+    font-family: Prompt;
+    font-size: 18px;
+    line-height: 24px;
+    width: 100%;
+    margin-left: 90px;
+    /* overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap; */
+  }
   .right-dsg{
-    min-width: 100px;
-    max-width: 105px;
+    min-width: 105px;
+    max-width: 115px;
     width: 100%;
     /* height: 40px; */
     text-align: center;
@@ -110,6 +168,7 @@
   .exp-year{
     /* max-width: 105px; */
     /* width: 100%; */
+    font-family: Prompt;
     font-size: 16px;
     font-weight: 400;
     line-height: 34px;
@@ -131,19 +190,57 @@
     border-width: 100px 0 0 100px; /* Adjust size */
     transform: rotate(-90deg);
     border-color: transparent transparent transparent #7b5cff;
+    border-bottom-left-radius: 10px;
   }
   
-  .triangle span {
+  .triangle .viewdetails {
     position: absolute;
     /* left: -80px; */
-    bottom: 10px; /* Centers text */
-    right: 45px; /* Centers text */
+    bottom: 12px; /* Centers text */
+    right: 40px; /* Centers text */
     transform: rotate(45deg);
+    font-family: "Poppins", serif;    
     font-size: 14px;
     line-height: 20px;
     color: #ffffff;
-    font-weight: bold;
+    font-weight: 400;
     text-align: center;
     /* border: 1px solid black; */
   }
   
+  .sidebar {
+    position: fixed;
+    top: 0;
+    right: -600px;
+    max-width: 600px;
+    width: 100%;
+    height: 100%;
+    background: #fff;
+    box-shadow: -5px 0 15px rgba(0, 0, 0, 0.2);
+    transition: right 0.3s ease-in-out;
+    padding: 20px;
+    z-index: 1000;
+}
+
+.sidebar.active {
+    right: 0;
+}
+
+.sidebar-content {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+#close-sidebar {
+    background: purple;
+    color: #fff;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+#close-sidebar:hover {
+    background: darkviolet;
+}
