--- a/css/footer.css
+++ b/css/footer.css
@@ -14,7 +14,7 @@
     gap: 20px;
 }
 .association-boxes .association-box{
-    border: 1px solid #ACACAC;
+    border: 1px solid #ffffff;
     box-shadow: 0px 4px 4px 0px #00000040;
     display: flex;
     flex-direction: column;
@@ -38,6 +38,7 @@
     font-family: Inter;
     font-size: 10px;
     color: #767676;
+    font-weight: 700;
 }
 
 /* Footer */
