--- a/css/maincontent.css
+++ b/css/maincontent.css
@@ -296,7 +296,7 @@
   right: -500px;
   max-width: 500px;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background: #fff;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   transition: right 0.5s ease-in-out;
@@ -312,8 +312,7 @@
   height: 100%;
   overflow-y: auto; */
   overflow-y: auto; /* Enable vertical scrolling */
-  max-height: 440px; /* Set max height for scrollable content */
-  height: calc(100vh - 40px); /* Adjust height for scroll, subtracting padding */
+  max-height: 400px; /* Set max height for scrollable content */
   padding-right: 20px; /* Add padding for scrollbar */
 }
 /* Customize the scrollbar */
@@ -334,13 +333,14 @@
   flex-direction: column;
   gap: 10px;
   height: 100%;
+  font-family: "Poppins", serif;
+
 }
 .hidden-details {
   background-color: #f9f9f9;
   border: 1px solid #e0e0e0;
   border-radius: 10px;
   padding: 20px;
-  /* max-width: 600px; */
   height: 100%;
   margin: 20px auto;
 }
@@ -352,39 +352,46 @@
 }
 
 .sidehide-title {
-  font-size: 1.5rem;
-  color: #333;
-  font-weight: 600;
+  color: #353E53;
+  font-family: Poppins;
+  font-size: 22px;
+  font-weight: 700;
+  text-align: left;
+  line-height: 28px;
 }
 
 .sidehide-subtitle {
-  font-size: 1.2rem;
+  font-size: 1rem;
   color: #666;
+  line-height: 18px;
+  padding-top: 5px;
 }
 
 .sidehide-description {
   font-size: 1rem;
   color: #555;
-  line-height: 1.6;
-  margin-bottom: 15px;
+  /* line-height: 1.6; */
+  /* margin-bottom: 15px; */
 }
 
 .sidehide-tasks {
-  list-style-type: disc;
+  /* list-style-type: disc; */
   padding-left: 20px;
   font-size: 1rem;
   color: #444;
-  line-height: 1.6;
+  height: 100%;
+  /* line-height: 1.6; */
 }
 
 .sidehide-tasks li {
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 
 #close-sidebar {
   width: 138px;
   height: 47px;
+  margin: 0 auto;
   border-radius: 5px;
   box-shadow: 0px 2px 2px 2px #CCCCCC1A;
   border: 1px solid rgba(220, 220, 220, 0.13);
