--- a/css/maincontent.css
+++ b/css/maincontent.css
@@ -73,7 +73,7 @@
 .experience-box {
   background-color: white;
   position: relative;
-  max-width: 1500px;
+  /* max-width: 1500px; */
   width: 90%;
   box-shadow: 0px 4px 4px 0px #00000040;
   border: 0.5px solid #C7C7C7;
@@ -212,12 +212,14 @@
 .skill-box-holder{
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  gap: 30px;
-  width: 100%;
+  justify-content: space-between;
+  /* gap: 30px; */
+  width: 90%;
+  /* padding: 20px 5px; */
+
 }
 .skills-box{
-  max-width: 400px;
+  max-width: 370px;
   width: 100%;
   background-color: #F8F8F8;
   box-shadow: 0px 4px 4px 0px #00000040;
