--- a/css/slider.css
+++ b/css/slider.css
@@ -6,6 +6,7 @@
             align-items: center;
             height: 100%;
             background: #ffffff;
+            margin-bottom: 30px;
         }
 
         .carousel-container {
