--- a/css/maincontent.css
+++ b/css/maincontent.css
@@ -212,8 +212,9 @@
 .skill-box-holder{
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
   justify-content: space-between;
-  /* gap: 30px; */
+  gap: 20px;
   width: 90%;
   /* padding: 20px 5px; */
 
@@ -221,6 +222,7 @@
 .skills-box{
   max-width: 370px;
   width: 100%;
+  height: 400px;
   background-color: #F8F8F8;
   box-shadow: 0px 4px 4px 0px #00000040;
   border: 1px solid #CFCFCF;
@@ -414,7 +416,11 @@
 }
 
 
-
+@media (max-width:1348px) {
+  .skill-box-holder{
+    justify-content: space-evenly;
+  }
+}
 
 @media (max-width:768px) {
   .main-out-box{
@@ -469,6 +475,11 @@
   }
   .skill .skill-para{
     font-size: 16px;
+  }
+}
+@media (max-width:346px) {
+  .skills-box{
+    height: 100%;
   }
 }
 
