--- a/css/slider.css
+++ b/css/slider.css
@@ -39,6 +39,7 @@
             align-items: center;
             position: relative;
             width: 100%;
+            padding: 5px;
         }
 
         .carousel-item {
@@ -49,7 +50,7 @@
         .carousel-item {
             max-width: 260px;
             width: 100%;
-            height: 250px;
+            max-height: 250px;
             /* padding: 5px; */
             border-radius: 5px;
             box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
@@ -115,6 +116,7 @@
             padding-top: 5px;
             padding-bottom: 5px;
             text-align: center;
+            width: 100%;
         }
 
         .slantpoints {
@@ -124,6 +126,7 @@
             color: #494949;
             padding-left: 15px;
             line-height: 15px;
+            width: 100%;
         }
 
         @media (max-width:500px) {
@@ -132,7 +135,39 @@
                 width: 100%;
                 height: 220px;
             }
+            .carousel-item img {
+            max-width: 260px;
+            width: 100%;
+            max-height: 250px;
+            height: 100%;
+            border-radius: 5px;
+            object-fit:cover;
+            background-color: white;
+        }
             .image-fixed>img {
                 width: 300px;
+            }
+        }
+        @media (max-width:390px) {
+            .carousel-item {
+                max-width: 200px;
+                width: 100%;
+                max-height: 220px;
+            }
+            .carousel-item img {
+            max-width: 200px;
+            width: 100%;
+            max-height: 250px;
+            height: 100%;
+            border-radius: 5px;
+            object-fit:cover;
+            background-color: white;
+        }
+            .image-fixed>img {
+                width: 300px;
+            }
+            .slanttextbox {
+                max-width: 185px;
+                height: auto;
             }
         }
