--- a/css/footer.css
+++ b/css/footer.css
@@ -48,7 +48,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 20px;
-    background-color: #5D5CDC;
+    background-color:#8BD8BD;
     gap: 20px;
 }
 .main-footer .main-footer-info{
