--- a/css/homepage.css
+++ b/css/homepage.css
@@ -30,12 +30,12 @@
   #spin-text {
     display: inline-block;
     padding: 5px 0px;
-    color: #5D5CDC;
+    color: #8BD8BD;
   }
   
   .spin-dot {
     position: absolute;
-    background-color: #FEB12F;
+    background-color: #243665;
     border-radius: 50%;
     width: 10px;
     height: 10px;
@@ -76,19 +76,19 @@
     left: 0;
     width: 100%;
     height: 8px;
-    background-color: #FEB12F80; 
+    background-color: #8BD8BD26; 
     z-index: 1000;
 }
 .main-portfolio   #scroll-progress-bar {
     width: 0%;
     height: 100%;
-    background-color: #FEB12F;
+    background-color:#8BD8BD;
     transition: width 0.5s ease-out;
 }
 
 /* Home Content Section*/
 .main-portfolio .main-home-page-content{
-    background-color: #5D5CDC;
+    background-color: white;
     width: 100%;
 }
 .main-home-page-content .homepage-image-section{
@@ -102,7 +102,7 @@
 }
 .main-home-page-content .homepage-image-section #yuktha-image-section,
 .main-home-page-content .homepage-image-section #wingherry-image-section{
-    background-color: rgb(194, 194, 194);
+    background-color: rgb(230, 230, 230);
     width: 55px;
     height: 55px;
     display: flex;
@@ -110,6 +110,8 @@
     justify-content: center;
     border-radius: 50%;
     transition: transform 0.5s ease;
+    box-shadow: 0px 4px 4px 0px #00000040;
+
 }
 .main-home-page-content .homepage-image-section #yuktha-image-section.scaled,
 .main-home-page-content .homepage-image-section #wingherry-image-section.scaled {
@@ -189,7 +191,7 @@
     position: relative;
     top: 100px;
     left: 50px;
-    color: white;
+    color: black;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -345,13 +347,14 @@
 }
 
 .main-into-section .main-into #getintouchbtn{
-    background-color: #FEB12F;
+    background-color: #8BD8BD;
     font-size: 18px;
     font-weight: 400;
     margin-top: 15px;
     padding: 6px 10px;
     border-radius: 20px;
     cursor: pointer;
+    color: white;
 }
 .main-into-section .curl-arrow{
     position: relative;
@@ -513,13 +516,13 @@
     border: 1px solid #ccc;
     border-radius: 5px;
     width: 100%;
-    background-color: #feb22f54;
+    background-color: #8BD8BD54;
     outline: none;
     resize: none;
   }
   
 #contactForm  #submitBtn {
-    background-color: #FEB12F;
+    background-color: #8BD8BD;
     color: white;
     padding: 8px 16px;
     border: none;
