--- a/css/maincontent.css
+++ b/css/maincontent.css
@@ -30,15 +30,14 @@
   font-size: 32px;
   line-height: 34px;
   font-weight: 700;
-  color: #5D5CDC;
+  color: black;
   text-align: center;
 }
 
 .content-holder-box .lines {
-  border: 4px solid #FEB12F;
+  border: 4px solid #24366580;
   max-width: 60px;
   width: 100%;
-  color: #FEB12F;
   border-radius: 4px 0 0 4px;
 }
 
@@ -135,7 +134,7 @@
   color: #BCBCBC;
 }
 .subhead{
-  color: #5D5CDC;
+  color: #8BD8BD;
   font-family: prompt;
   font-weight: 700;
 }
@@ -167,8 +166,8 @@
   font-size: 16px;
   font-weight: 400;
   line-height: 34px;
-  color: #5D5CDC;
-  background-color: #FEB12F;
+  color: white;
+  background-color: #243665;
   box-shadow: 0px 4px 4px 0px #00000040;
   padding: 5px 5px;
   border-top-right-radius: 10px;
@@ -186,7 +185,7 @@
   border-width: 100px 0 0 100px;
   /* Adjust size */
   transform: rotate(-90deg);
-  border-color: transparent transparent transparent #7b5cff;
+  border-color: transparent transparent transparent #8BD8BD;
   border-bottom-left-radius: 10px;
 }
 
@@ -231,7 +230,7 @@
 }
 .skills-box:hover{
   color: white;
-  background-color: #5D5CDC;
+  background-color: #8BD8BD;
   transform: scale(1.04);
   box-shadow: 0px 6px 6px 0px #00000050;
 }
@@ -325,7 +324,7 @@
 }
 
 .sidehidescroll::-webkit-scrollbar-thumb {
-  background-color: #5D5CDC; /* Set the color of the scrollbar thumb */
+  background-color: #8BD8BD; /* Set the color of the scrollbar thumb */
   border-radius: 5px; /* Optional: add rounded corners */
 }
 
@@ -350,7 +349,7 @@
 }
 
 .sidehide-header {
-  border-bottom: 2px solid #0073e6;
+  border-bottom: 2px solid #8bd8bd65;
   padding-bottom: 10px;
   margin-bottom: 15px;
 }
@@ -405,13 +404,13 @@
   font-weight: 700;
   line-height: 24px;
   text-align: center;
-  color: #5D5CDC;
+  color: #8BD8BD;
   transition: all 0.3s ease-in;
 }
 
 #close-sidebar:hover{
   cursor: pointer;
-  background-color: #5D5CDC;
+  background-color: #8BD8BD;
   color: white;
 }
 
