--- a/css/slider.css
+++ b/css/slider.css
@@ -1,173 +1,308 @@
-      
+.caro {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  background: #ffffff;
+  margin-bottom: 30px;
+}
 
-        .caro {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100%;
-            background: #ffffff;
-            margin-bottom: 30px;
-        }
+.carousel-container {
+  position: relative;
+  width: 100%;
+  height: 550px;
+  /* Adjusted container height to match image height */
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+  gap: 100px;
+  /* Increased space between images */
+}
 
-        .carousel-container {
-            position: relative;
-            width: 100%;
-            height: 550px;
-            /* Adjusted container height to match image height */
-            overflow: hidden;
-            display: flex;
-            justify-content: center;
-            /* align-items: center; */
-            gap: 100px;
-            /* Increased space between images */
-        }
+.image-fixed {
+  position: absolute;
+  margin-top: 30px;
+  margin-right: 100px;
+}
 
-        .image-fixed {
-            position: absolute;
-            margin-top: 30px;
-            margin-right: 100px;
-        }
+.image-fixed > img {
+  max-width: 400px;
+  width: 100%;
+}
 
-        .image-fixed>img {
-            max-width: 400px;
-            width: 100%;
-        }
+.carousel {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: 100%;
+  padding: 5px;
+}
 
-        .carousel {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: relative;
-            width: 100%;
-            padding: 5px;
-        }
+.carousel-item {
+  position: absolute;
+  transition: transform 0.5s ease-in-out, opacity 0s ease-in-out;
+}
 
-        .carousel-item {
-            position: absolute;
-            transition: transform 0.5s ease-in-out, opacity 0s ease-in-out;
-        }
+.carousel-item {
+  max-width: 260px;
+  width: 100%;
+  max-height: 250px;
+  /* padding: 5px; */
+  border-radius: 5px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+}
 
-        .carousel-item {
-            max-width: 260px;
-            width: 100%;
-            max-height: 250px;
-            /* padding: 5px; */
-            border-radius: 5px;
-            box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-        }
+.carousel-item img {
+  max-width: 260px;
+  width: 100%;
+  max-height: 250px;
+  height: 100%;
+  border-radius: 5px;
+  object-fit: cover;
+  background-color: white;
+}
 
-        .carousel-item img {
-            max-width: 260px;
-            width: 100%;
-            max-height: 250px;
-            height: 100%;
-            border-radius: 5px;
-            object-fit:cover;
-            background-color: white;
-        }
+.left {
+  transform: translateX(-150%) scale(0.8);
+  /* Adjusted to move the image more to the left */
+  opacity: 0.5;
+}
 
-        .left {
-            transform: translateX(-150%) scale(0.8);
-            /* Adjusted to move the image more to the left */
-            opacity: 0.5;
-        }
+.center {
+  transform: translateX(0) scale(1.5);
+  opacity: 1;
+  /* Fixed opacity value for better clarity */
+}
 
-        .center {
-            transform: translateX(0) scale(1.5);
-            opacity: 1;
-            /* Fixed opacity value for better clarity */
-        }
+.right {
+  transform: translateX(150%) scale(0.8);
+  /* Adjusted to move the image more to the right */
+  opacity: 0.5;
+}
 
-        .right {
-            transform: translateX(150%) scale(0.8);
-            /* Adjusted to move the image more to the right */
-            opacity: 0.5;
-        }
+.behind {
+  transform: translateX(0) scale(1.5);
+  opacity: 0;
+}
 
-        .behind {
-            transform: translateX(0) scale(1.5);
-            opacity: 0;
-        }
+.slanttextbox {
+  position: absolute;
+  background-color: white;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  border-radius: 2px;
+  left: 50%;
+  bottom: -45px;
+  max-width: 200px;
+  width: 100%;
+  height: 90px;
+  transform: translateX(-50%) rotate(-6.31deg);
+  padding: 10px;
+}
 
-        .slanttextbox {
-            position: absolute;
-            background-color: white;
-            box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-            border-radius: 2px;
-            left: 50%;
-            bottom: -45px;
-            max-width: 200px;
-            width: 100%;
-            height: 90px;
-            transform: translateX(-50%) rotate(-6.31deg);
-            padding: 10px;
-        }
+.slanttextbox {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
 
-        .slanttextbox {
-            display: flex;
-            justify-content: center;
-            width: 100%;
-        }
+.slanthead {
+  font-family: prompt;
+  font-size: 12px;
+  font-weight: 700;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  text-align: center;
+  width: 100%;
+}
 
-        .slanthead {
-            font-family: prompt;
-            font-size: 12px;
-            font-weight: 700;
-            padding-top: 5px;
-            padding-bottom: 5px;
-            text-align: center;
-            width: 100%;
-        }
+.slantpoints {
+  font-family: prompt;
+  font-size: 10px;
+  font-weight: 400;
+  color: #494949;
+  padding-left: 15px;
+  line-height: 15px;
+  width: 100%;
+}
 
-        .slantpoints {
-            font-family: prompt;
-            font-size: 10px;
-            font-weight: 400;
-            color: #494949;
-            padding-left: 15px;
-            line-height: 15px;
-            width: 100%;
-        }
+@media (max-width: 500px) {
+  .carousel-item {
+    max-width: 220px;
+    width: 100%;
+    height: 220px;
+  }
+  .carousel-item img {
+    max-width: 260px;
+    width: 100%;
+    max-height: 250px;
+    height: 100%;
+    border-radius: 5px;
+    object-fit: cover;
+    background-color: white;
+  }
+  .image-fixed > img {
+    width: 300px;
+  }
+}
+@media (max-width: 390px) {
+  .carousel-item {
+    max-width: 200px;
+    width: 100%;
+    max-height: 220px;
+  }
+  .carousel-item img {
+    max-width: 200px;
+    width: 100%;
+    max-height: 250px;
+    height: 100%;
+    border-radius: 5px;
+    object-fit: cover;
+    background-color: white;
+  }
+  .image-fixed > img {
+    width: 300px;
+  }
+  .slanttextbox {
+    max-width: 185px;
+    height: auto;
+  }
+}
 
-        @media (max-width:500px) {
-            .carousel-item {
-                max-width: 220px;
-                width: 100%;
-                height: 220px;
-            }
-            .carousel-item img {
-            max-width: 260px;
-            width: 100%;
-            max-height: 250px;
-            height: 100%;
-            border-radius: 5px;
-            object-fit:cover;
-            background-color: white;
-        }
-            .image-fixed>img {
-                width: 300px;
-            }
-        }
-        @media (max-width:390px) {
-            .carousel-item {
-                max-width: 200px;
-                width: 100%;
-                max-height: 220px;
-            }
-            .carousel-item img {
-            max-width: 200px;
-            width: 100%;
-            max-height: 250px;
-            height: 100%;
-            border-radius: 5px;
-            object-fit:cover;
-            background-color: white;
-        }
-            .image-fixed>img {
-                width: 300px;
-            }
-            .slanttextbox {
-                max-width: 185px;
-                height: auto;
-            }
-        }
+/* media code */
+
+.media-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    background: #f1f4fd;
+    flex-direction: column;
+}
+
+.media-container {
+    max-width: 1200px;
+    width: 95%;
+    text-align: center;
+}
+
+.media-slider-wrapper {
+    position: relative;
+    margin-bottom: 20px;
+}
+
+.media-slider-wrapper .media-image-list {
+    display: grid;
+    grid-template-columns: repeat(4, 2fr);
+    gap: 18px;
+    font-size: 0;
+    list-style: none;
+    margin-bottom: 30px;
+    overflow-x: auto;
+    scrollbar-width: none;
+}
+
+.media-slider-wrapper .media-image-list::-webkit-scrollbar {
+    display: none;
+}
+
+.media-slider-wrapper .media-image-list .media-image-item {
+    width: 560px;
+    height: 315px;
+    object-fit: cover;
+}
+
+.media-slider-controls {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    margin-top: 20px; /* Added space above buttons */
+}
+
+.media-slider-controls .media-slide-button {
+    outline: none;
+    border: none;
+    height: 50px;
+    width: 50px;
+    color: #fff;
+    cursor: pointer;
+    font-size: 2.2rem;
+    background: #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+}
+
+.media-slider-controls .media-slide-button:hover {
+    background: #404040;
+}
+
+.media-container .media-slider-scrollbar {
+    height: 24px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    margin-top: 15px;
+}
+
+.media-slider-scrollbar .media-scrollbar-track {
+    background: #ccc;
+    width: 100%;
+    height: 2px;
+    display: flex;
+    align-items: center;
+    border-radius: 4px;
+    position: relative;
+}
+
+.media-slider-scrollbar:hover .media-scrollbar-track {
+    height: 4px;
+}
+
+.media-slider-scrollbar .media-scrollbar-thumb {
+    position: absolute;
+    background: #000;
+    top: 0;
+    bottom: 0;
+    width: 50%;
+    height: 100%;
+    cursor: grab;
+    border-radius: inherit;
+}
+
+.media-slider-scrollbar .media-scrollbar-thumb:active {
+    cursor: grabbing;
+    height: 8px;
+    top: -2px;
+}
+
+.media-slider-scrollbar .media-scrollbar-thumb::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: -10px;
+    bottom: -10px;
+}
+
+/* Styles for mobile and tablets */
+@media only screen and (max-width: 1023px) {
+    .media-slider-wrapper .media-image-list {
+        gap: 10px;
+        margin-bottom: 15px;
+        scroll-snap-type: x mandatory;
+    }
+
+    .media-slider-wrapper .media-image-list .media-image-item {
+        width: 280px;
+        height: 200px;
+    }
+
+    .media-slider-scrollbar .media-scrollbar-thumb {
+        width: 20%;
+    }
+}
