--- a/css/maincontent.css
+++ b/css/maincontent.css
@@ -433,7 +433,7 @@
     gap: 10px;
   }
   .content-holder-box .lines {
-    border: 3px solid #FEB12F;
+    border: 3px solid #919AB1;
   }
   .upper-content-bx {
     display: flex;
