--- a/css/maincontent.css
+++ b/css/maincontent.css
@@ -96,6 +96,10 @@
   /* min-width: 50px; */
   max-width: 60px;
   width: 100%;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .upper-icon img {
@@ -134,7 +138,7 @@
   color: #BCBCBC;
 }
 .subhead{
-  color: #8BD8BD;
+  color: #00246B;
   font-family: prompt;
   font-weight: 700;
 }
@@ -166,8 +170,8 @@
   font-size: 16px;
   font-weight: 400;
   line-height: 34px;
-  color: white;
-  background-color: #243665;
+  color: rgb(0, 0, 0);
+  background-color: #CADCFC;
   box-shadow: 0px 4px 4px 0px #00000040;
   padding: 5px 5px;
   border-top-right-radius: 10px;
@@ -185,7 +189,7 @@
   border-width: 100px 0 0 100px;
   /* Adjust size */
   transform: rotate(-90deg);
-  border-color: transparent transparent transparent #8BD8BD;
+  border-color: transparent transparent transparent #00246B;
   border-bottom-left-radius: 10px;
 }
 
@@ -222,15 +226,15 @@
   max-width: 370px;
   width: 100%;
   height: 400px;
-  background-color: #F8F8F8;
+  background-color: rgba(202, 220, 252, 0.5);
   box-shadow: 0px 4px 4px 0px #00000040;
   border: 1px solid #CFCFCF;
   border-radius: 10px;
   transition: all 0.4s ease-in, box-shadow 0.3s ease-in;
 }
 .skills-box:hover{
-  color: white;
-  background-color: #8BD8BD;
+  color: rgb(0, 0, 0);
+  background-color: #CADCFC;
   transform: scale(1.04);
   box-shadow: 0px 6px 6px 0px #00000050;
 }
@@ -293,6 +297,16 @@
   font-weight: 400;
   line-height: 26px;
 }
+.item {
+  display: flex;
+  align-items: flex-start;
+  gap: 10px; /* Adds space between checkmark and text */
+}
+
+.checkmark {
+  flex-shrink: 0; /* Prevents the checkmark from shrinking */
+}
+
 .sidebar {
   position: fixed;
   top: 0;
@@ -325,12 +339,12 @@
 }
 
 .sidebar-content::-webkit-scrollbar-thumb {
-  background-color: #8BD8BD; /* Set the color of the scrollbar thumb */
+  background-color: #00246B; /* Set the color of the scrollbar thumb */
   border-radius: 5px; /* Optional: add rounded corners */
 }
 
 .sidebar-content::-webkit-scrollbar-track {
-  background-color: #f0f0f0; /* Set the track background color */
+  background-color: rgba(202, 220, 252, 0.5); /* Set the track background color */
 }
 /* Background overlay */
 .overlay {
@@ -367,7 +381,7 @@
 }
 
 .sidehide-header {
-  border-bottom: 2px solid #8bd8bd90;
+  border-bottom: 2px solid #00246B;
   padding-bottom: 10px;
   margin-bottom: 15px;
   margin-right: 20px;
@@ -419,19 +433,19 @@
   border-radius: 5px;
   box-shadow: 0px 2px 2px 2px #CCCCCC1A;
   border: 1px solid rgba(220, 220, 220, 0.684);
-  background-color: #F5F5F5;
+  background-color: rgba(202, 220, 252, 0.5);
   font-family: Poppins;
   font-size: 14px;
   font-weight: 700;
   /* line-height: 24px; */
   text-align: center;
-  color: #8BD8BD;
+  color: #00246B;
   transition: all 0.3s ease-in;
 }
 
 #close-sidebar:hover{
   cursor: pointer;
-  background-color: #8BD8BD;
+  background-color: #00246B;
   color: white;
 }
 
