--- a/css/maincontent.css
+++ b/css/maincontent.css
@@ -226,7 +226,7 @@
   max-width: 370px;
   width: 100%;
   height: 440px;
-  background-color: rgba(202, 220, 252, 0.5);
+  background-color: rgb(255, 255, 255);
   box-shadow: 0px 4px 4px 0px #00000040;
   border: 1px solid #CFCFCF;
   border-radius: 10px;
@@ -235,6 +235,7 @@
 .skills-box:hover{
   color: rgb(0, 0, 0);
   background-color: #CADCFC;
+  background-color: rgb(228,237,253);
   transform: scale(1.04);
   box-shadow: 0px 6px 6px 0px #00000050;
 }
