--- a/css/maincontent.css
+++ b/css/maincontent.css
@@ -78,7 +78,8 @@
   border: 0.5px solid #C7C7C7;
   border-radius: 10px;
   min-height: 180px;
-  max-height: 500px;
+  max-height: 300px;
+  height: max-content;
   transition: all 0.3s ease-in, box-shadow 0.3s ease-in;
 }
 
@@ -112,7 +113,6 @@
   display: flex;
   flex-direction: column;
   padding: 15px 15px;
-  gap: 10px;
 }
 
 .upper-part {
@@ -135,7 +135,7 @@
   width: 100%;
 }
 .exp-head .lightheading{
-  color: #BCBCBC;
+  color: #424242;
 }
 .subhead{
   color: #00246B;
@@ -147,7 +147,7 @@
   font-size: 18px;
   line-height: 24px;
   width: 100%;
-  padding-left: 90px;
+  padding-left: 80px;
   /* overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap; */
@@ -211,6 +211,75 @@
   /* border: 1px solid black; */
 }
 
+
+/* Professional Certificates */
+.container-certification {
+  padding: 30px;
+  width: 100%;
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
+  align-items: center;
+}
+
+.certification {
+  border-radius: 8px;
+  padding: 25px;
+  border: 0.5px solid #C7C7C7;
+  transition: transform 0.5s ease;
+  max-width: 90%;
+  width: 100%;
+  box-shadow: 0px 4px 4px 0px #00000040;
+  position: relative;
+  border-top: 4px solid #00246B;
+}
+
+.certification::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 2px;
+  background-color: #00246B;
+  transition: width 0.8s ease;
+}
+
+.certification:hover::before {
+  width: 100%;
+}
+
+.certification:hover {
+  background-color: #E4EDFD;
+  transform: scale(1.03);
+}
+
+
+.certificate-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-family: Prompt;
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.certificate-header .cer-head {
+  font-size: 20px;
+  color: #292929;
+  font-weight: 500;
+}
+
+.year {
+  font-family: Prompt;
+  font-size: 18px;
+  font-weight: 600;
+  color: #243665;
+  font-style: italic;
+}
 /* skill */
 .skill-box-holder{
   display: flex;
@@ -495,6 +564,8 @@
   }
   .experience-box {
     width: 100%;
+    max-height: 500px ;
+    height: 100%;
   }
   .exp-para {
     padding-left: 10px;
@@ -511,10 +582,24 @@
   .skill .skill-para{
     font-size: 16px;
   }
+  .container-certification{
+    max-width: 100%;
+    width: 100%;
+  }
+}
+@media (max-width:618px) {
+  .certificate-header{
+    flex-direction: column-reverse;
+    gap: 10px;
+  }
+  .certificate-header>span{
+    text-align: center;
+  }
 }
 @media (max-width:346px) {
   .skills-box{
     height: 100%;
   }
 }
+
 
