--- a/css/maincontent.css
+++ b/css/maincontent.css
@@ -563,18 +563,21 @@
     font-size: 18px;
     width: 100%;
     line-height: 25px;
+    
   }
   .exp-para {
     font-size: 16px;
     width: 100%;
+    padding-left: 10px;
+    font-weight: 400;
+  }
+  .subhead{
+    font-weight: 500;
   }
   .experience-box {
     width: 100%;
     max-height: 500px ;
     height: 100%;
-  }
-  .exp-para {
-    padding-left: 10px;
   }
   .exp-year {
     font-size: 14px;
@@ -591,6 +594,12 @@
   .container-certification{
     max-width: 100%;
     width: 100%;
+  }
+  .year {
+    font-size: 16px;
+  }
+  .certificate-header .cer-head{
+    font-size: 18px;
   }
 }
 @media (max-width:618px) {
