--- a/css/footer.css
+++ b/css/footer.css
@@ -13,14 +13,14 @@
     gap: 20px;
 }
 .association-boxes .association-box{
-    border: 1px solid #ffffff;
+    border: 1px solid #CFCFCF;
     box-shadow: 0px 4px 4px 0px #00000040;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
     width: 340px;
-    height: 260px;
+    height: 290px;
     gap: 5px;
     border-radius: 4px;
     border: 1px 0px 0px 0px;
@@ -34,6 +34,7 @@
     font-size: 22px;
     font-weight: 700;
     line-height: 26.63px;
+    padding: 10px;
 
 }
 .association-boxes .association-box>div>span{
@@ -65,7 +66,7 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 20px;
-    margin-left: 20px;
+    margin-left: 90px;
 }
 .footer-info .info-details{
     background-color: white;
@@ -108,6 +109,9 @@
     .main-footer .main-footer-info{
         align-items: center;
         justify-content: center;
+    }
+    .main-footer-info .footer-info{
+        margin-left: 0px;
     }
 }
 @media (max-width:620px) {
