--- a/css/slider.css
+++ b/css/slider.css
@@ -198,34 +198,37 @@
   
   .slider-wrapper .slide-button {
     position: absolute;
-    top: 50%;
+    /* top: 50%; */
     outline: none;
     border: none;
-    height: 50px;
-    width: 50px;
+    left: 50%;
+    height: 40px;
+    width: 40px;
     z-index: 5;
     color: #fff;
     display: flex;
     cursor: pointer;
     font-size: 2.2rem;
-    background: #000;
+    background: #00246B;
     align-items: center;
     justify-content: center;
     border-radius: 50%;
-    transform: translateY(-50%);
+    transform: translateY(80%);
   }
   
   .slider-wrapper .slide-button:hover {
-    background: #404040;
+    background: #00246b;
   }
   
   .slider-wrapper .slide-button#prev-slide {
-    left: -25px;
-    display: none;
+    left: calc(50% - 35px); /* Adjust spacing */
+    bottom: -20px;
+    display: block; /* Ensure visibility */
   }
   
   .slider-wrapper .slide-button#next-slide {
-    right: -25px;
+    left: calc(50% + 35px); /* Adjust spacing */
+    bottom: -20px;
   }
   .image-list {
     display: flex;
@@ -243,6 +246,7 @@
     text-align: center;
     transition: 0.3s ease-in-out;
     box-shadow: 0px 4px 4px 0px #00000040;
+    border: 1px solid #CFCFCF;
     /* margin: 2px; */
     padding: 10px;
     border-radius: 10px;
@@ -312,37 +316,40 @@
     width: 100%;
     display: flex;
     align-items: center;
+    margin-top: 60px;
   }
   
   .slider-scrollbar .scrollbar-track {
     background: #ccc;
     width: 100%;
-    height: 2px;
+    height: 15px;
     display: flex;
     align-items: center;
     border-radius: 4px;
     position: relative;
+    
   }
   
   .slider-scrollbar:hover .scrollbar-track {
-    height: 4px;
+    height: 15px;
   }
   
   .slider-scrollbar .scrollbar-thumb {
     position: absolute;
-    background: #000;
+    background: #00246B;
     top: 0;
     bottom: 0;
     width: 50%;
-    height: 100%;
+    height: 50%;
+    margin: auto 5px;
     cursor: grab;
     border-radius: inherit;
   }
   
   .slider-scrollbar .scrollbar-thumb:active {
     cursor: grabbing;
-    height: 8px;
-    top: -2px;
+    height: 60%;
+    /* top: -2px; */
   }
   
   .slider-scrollbar .scrollbar-thumb::after {
@@ -371,7 +378,9 @@
       height: 250px;
       object-fit: cover;
     }
-  
+    .container .slider-scrollbar {
+      margin-top: 0px;
+    }
     .slider-scrollbar .scrollbar-thumb {
       width: 20%;
     }
